--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^6.0.5",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@types/dompurify": "^3.0.5",
     "body-scroll-lock": "^3.1.5",
     "dompurify": "^3.2.6",
-    "ip2location-nodejs": "^9.6.3",
     "negotiator": "^1.0.0",
     "next": "15.3.3",
     "react": "^19.0.0",
@@ -23,7 +23,6 @@
     "react-icons": "^5.5.0",
     "sass": "^1.89.2",
     "swiper": "^11.2.8",
-    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
