--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/dompurify": "^3.0.5",
     "body-scroll-lock": "^3.1.5",
     "dompurify": "^3.2.6",
+    "ip2location-nodejs": "^9.6.3",
     "negotiator": "^1.0.0",
     "next": "15.3.3",
     "react": "^19.0.0",
